RESOLVED FIXED 272883
Missing spaces in log from SourceBuffer::appendBufferInternal
https://bugs.webkit.org/show_bug.cgi?id=272883
Summary Missing spaces in log from SourceBuffer::appendBufferInternal
Carlos Bentzen
Reported 2024-04-18 01:35:28 PDT
Spaces are missing in this log line: ALWAYS_LOG(LOGIDENTIFIER, "size = ", data.size(), "maximumBufferSize = ", maximumBufferSize(), "buffered = ", m_buffered->ranges(), " streaming = ", m_source->streaming()); It's a trivial change, but since it needs bug attached to the PR, here we go.
Attachments
Carlos Bentzen
Comment 1 2024-04-18 01:38:18 PDT
EWS
Comment 2 2024-04-20 01:24:30 PDT
Committed 277777@main (e953730c8ba9): <https://commits.webkit.org/277777@main> Reviewed commits have been landed. Closing PR #27437 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-22 08:55:00 PDT
Note You need to log in before you can comment on or make changes to this bug.